# kubesleeper

./: .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.list  TODO.yaml  home.html  index.html  install.html  install.sh  kubesleeper.yaml  print.html  roadmap.html  searcher-c2a407aa.js  searchindex-04df2c40.js  searchindex-1c40e283.js  searchindex-279961b2.js  searchindex-67d60cf0.js  searchindex-72451c25.js  searchindex-75f2efeb.js  searchindex-8f4b2598.js  searchindex-951494ce.js  searchindex-cedbfc8f.js  toc-3948d750.js  toc-6b8b3150.js  toc-b3bb9d93.js  toc-c877dfc4.js  toc-d0d55bd7.js  toc.html  todo.list  what_is_it.html
.github/workflows/: check_commits.yaml  checking_commits.yaml  discord_bot.yaml  doc.yaml  mr_checking_commits.yaml  mr_checks.yaml  prod_doc.yaml  prod_release.yaml  release.yaml  versioning_and_releasing.yaml
annex/: contribute.html  roadmap.html
annexes/: common_errors.html  contribute.html  roadmap.html
config/: helm.html  kubesleeper.html  kubesleeper_cli.html
doc/: Pitch.md  book.toml
doc/src/: SUMMARY.md  contribute.md  home.md  how_it_works.md  install.md  roadmap.md  what_is_it.md
doc/src/annex/: contribute.md  (+1 more)
doc/theme/: custom.css
envs/basic/: blue-deploy.yaml  green-deploy.yaml  ingress.yaml  mock_kubesleeper.yaml
envs/only-kubesleeper/: kubesleeper.yaml
guide/: cli.html  how_it_works.html  install.html
src/: Cargo.toml  main.bck.rs  main.rs  msg.rs  rustfmt.toml  status.rs
src/core/: mod.rs  server.rs  state.rs
static/: waiting.html
theme/: custom-7f8938e5.css  custom-bf930394.css
(+40 files in other folders)
